--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						</td>
 
 						<td>
-							<p> <font size="+2">SpecMAE</font> </p>
+							<p> <font size="+2">VQSMAE (ours)</font> </p>
 							<img id="0-img_reconstructed" src="demos/ratio-50/0-Ratio-50-reconstructed.wav.svg" alt="z_v"  width="250" />
 							<audio id="0-wav_reconstructed" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/0-Ratio-50-reconstructed.wav"></audio>
 						</td>
