--- a/index.html
+++ b/index.html
@@ -133,69 +133,69 @@
 					<table style="width:100%; text-align: center;">
 						<td>
 							<p> <font size="+2">Original</font> </p>
-							<img id="0-img_original" src="demos/ratio-50/0-Ratio-50-original.wav.svg" alt="z_v"  width="250" />
+							<img id="0-img_original" src="demos/ratio-50/0-Ratio-50-original.wav.svg" alt="z_v"  width="300" />
 							<audio id="0-wav_original" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/0-Ratio-50-original.wav"></audio>
 						</td>
 
 						<td>
 							<p> <font size="+2">Masked</font> </p>
-							<img id="0-img_masked" src="demos/ratio-50/0-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />
+							<img id="0-img_masked" src="demos/ratio-50/0-Ratio-50-masked.wav.svg" alt="z_v"  width="300" />
 							<audio id="0-wav_masked" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/0-Ratio-50-masked.wav"></audio>
 						</td>
 
-						<td>
-							<p> <font size="+2">SpecMAE-12</font> </p>
-							<img id="0-img_spec" src="demos/ratio-50/0-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />
-							<audio id="0-wav_spec" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/0-Ratio-50-reconstructed.wav"></audio>
-						</td>
+<!--						<td>-->
+<!--							<p> <font size="+2">SpecMAE-12</font> </p>-->
+<!--							<img id="0-img_spec" src="demos/ratio-50/0-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />-->
+<!--							<audio id="0-wav_spec" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/0-Ratio-50-reconstructed.wav"></audio>-->
+<!--						</td>-->
 
 						<td>
 							<p> <font size="+2">VQ-MAE-S-12 (ours)</font> </p>
-							<img id="0-img_reconstructed" src="demos/ratio-50/0-Ratio-50-reconstructed.wav.svg" alt="z_v"  width="250" />
+							<img id="0-img_reconstructed" src="demos/ratio-50/0-Ratio-50-reconstructed.wav.svg" alt="z_v"  width="300" />
 							<audio id="0-wav_reconstructed" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/0-Ratio-50-reconstructed.wav"></audio>
 						</td>
 					</table>
 
 					<table style="width:100%; text-align: center;">
 						<td>
-							<img id="1-img_original" src="demos/ratio-50/1-Ratio-50-original.wav.svg" alt="z_v"  width="250" />
+							<img id="1-img_original" src="demos/ratio-50/1-Ratio-50-original.wav.svg" alt="z_v"  width="300" />
 							<audio id="1-wav_original" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/1-Ratio-50-original.wav"></audio>
 						</td>
 
 						<td>
-							<img id="1-img_masked" src="demos/ratio-50/1-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />
+							<img id="1-img_masked" src="demos/ratio-50/1-Ratio-50-masked.wav.svg" alt="z_v"  width="300" />
 							<audio id="1-wav_masked" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/1-Ratio-50-masked.wav"></audio>
 						</td>
 
-						<td>
-							<img id="1-img_spec" src="demos/ratio-50/1-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />
-							<audio id="1-wav_spec" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/1-Ratio-50-reconstructed.wav"></audio>
-						</td>
+<!--						<td>-->
+<!--							<img id="1-img_spec" src="demos/ratio-50/1-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />-->
+<!--							<audio id="1-wav_spec" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/1-Ratio-50-reconstructed.wav"></audio>-->
+<!--						</td>-->
 
 						<td>
-							<img id="1-img_reconstructed" src="demos/ratio-50/1-Ratio-50-reconstructed.wav.svg" alt="z_v"  width="250" />
+							<img id="1-img_reconstructed" src="demos/ratio-50/1-Ratio-50-reconstructed.wav.svg" alt="z_v"  width="300" />
 							<audio id="1-wav_reconstructed" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/1-Ratio-50-reconstructed.wav"></audio>
 						</td>
 					</table>
 
 					<table style="width:100%; text-align: center;">
 						<td>
-							<img id="2-img_original" src="demos/ratio-50/2-Ratio-50-original.wav.svg" alt="z_v"  width="250" />
+							<img id="2-img_original" src="demos/ratio-50/2-Ratio-50-original.wav.svg" alt="z_v"  width="300" />
 							<audio id="2-wav_original" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/2-Ratio-50-original.wav"></audio>
 						</td>
 
 						<td>
-							<img id="2-img_masked" src="demos/ratio-50/2-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />
+							<img id="2-img_masked" src="demos/ratio-50/2-Ratio-50-masked.wav.svg" alt="z_v"  width="300" />
 							<audio id="2-wav_masked" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/2-Ratio-50-masked.wav"></audio>
 						</td>
 
-						<td>
-							<img id="2-img_spec" src="demos/ratio-50/2-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />
-							<audio id="2-wav_spec" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/2-Ratio-50-reconstructed.wav"></audio>
-						</td>
+<!--						<td>-->
+<!--							<img id="2-img_spec" src="demos/ratio-50/2-Ratio-50-masked.wav.svg" alt="z_v"  width="250" />-->
+<!--							<audio id="2-wav_spec" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/2-Ratio-50-reconstructed.wav"></audio>-->
+<!--						</td>-->
 
 						<td>
-							<img id="2-img_reconstructed" src="demos/ratio-50/2-Ratio-50-reconstructed.wav.svg" alt="z_v"  width="250" />
+							<img id="2-img_reconstructed" src="demos/ratio-50/2-Ratio-50-reconstructed.wav.svg" alt="z_v"  width="300" />
 							<audio id="2-wav_reconstructed" style="width: 200px" controls="controls" preload="none" src="demos/ratio-50/2-Ratio-50-reconstructed.wav"></audio>
 						</td>
 					</table>
