--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				-->
 
 				<p style="text-align: center;">
-					 <a href="https://arxiv.org/MDVAE" target="_blank" rel="noopener">Article</a> |
+					 <a href="https://arxiv.org/abs/2304.11117" target="_blank" rel="noopener">Article</a> |
 					<!-- <a href="#audio">Audio examples</a> |  -->
 <!--					 <a href="documents/presentation_icassp2020.pdf">Slides</a> |  -->
 					<a href="https://github.com/samsad35/VQ-MAE-Speech-code" target="_blank" rel="noopener">Code</a>
@@ -116,8 +116,9 @@
 			<!-- VISUALISATION OF THE LEARNED LATENT SUBSPACES -->
 			<span style="font-size: large;"><a name="latentspace"></a><strong>Qualitative Results</strong></span>
 			<hr>
-			
+			We present some qualitative results below to demonstrate the effectiveness of our proposed VQ-MAE-S method. The figure shows the original spectrograms on the left, the masked spectrograms in the middle, and the reconstructed spectrograms on the right. The user can vary the masking ratio from 50% to 90%. In addition, we provide the corresponding temporal audio signal to listen. To generate the masked spectrograms, we replaced the masked tokens with 0 indices and then used the VQ-VAE decoder to reconstruct the masked spectrogram. These results showcase the ability of our model to accurately reconstruct the missing portions of the spectrograms even with a high degree of masking.
 			<br>
+				<br>
 				<div style="width:100%; text-align: justify; border: 0px dashed Red;">
 <!--					<span style="font-size: medium; color:Red;"><a name="Visual"></a><strong><font size="+2">RATIO 50%</font></strong></span>-->
 					<center>
